User registration and login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">MyMApps</string>
     <string name="title_activity_maps">Map</string>
+    <string name="hintEnterEmail">Enter email address</string>
+    <string name="hintEnterPassword">Enter password</string>
+    <string name="buttonRegisterUser">Register</string>
+    <string name="textViewAlreadyRegistered">Already registered? Login here.</string>
+    <string name="textViewNotRegistered">Not registered? Sign up here.</string>
+    <string name="buttonLoginUser">Login</string>
 </resources>
