--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MyMApps</string>
-    <string name="API_KEY">AIzaSyB6sWXGSLQfiBuPQrcBaAe9dBNdKYvmgqs</string>
+    <string name="API_KEY">Insert API Key</string>
     <string name="title_activity_maps">Map</string>
     <string name="hintEnterEmail">Enter Email Address</string>
     <string name="hintEnterPassword">Enter Password</string>
